tests/semantic/pass/function_definition_which_defines_a_struct_and_returns_a_pointer_to_this_type.c
struct S {int i;} *s(void) {return 0;}

int main(void) {
  return 0;
}

