tests/semantic/fail/incompatible_return_type.c
struct S {int i;};

int main(void) {
  struct S s;
  return s;
}
